--- a/src/main/resources/templates/fragments/base/script.html
+++ b/src/main/resources/templates/fragments/base/script.html
@@ -44,5 +44,9 @@
         </div>
     </noscript>
 
+    <script src="/js/test.js"></script>
+    <script src="/js/navbar.js"></script>
+
+
 </th:block>
 </html>
