Design: 포인트 충전 아이콘 변경

--- a/src/main/resources/templates/fragments/base/header.html
+++ b/src/main/resources/templates/fragments/base/header.html
@@ -17,7 +17,7 @@
 
                     <button class="btn btn--icon toggle-button toggle-button--secondary fas fa-cogs responsible-hidden"
                             type="button"></button>
-                    <button class="btn btn--icon toggle-button toggle-button--secondary fas fa-cogs" type="button"></button>
+                    <button class="btn btn--icon toggle-button toggle-button--secondary fas fa-cogs responsible-hidden" type="button"></button>
 
                     <!--====== Menu ======-->
                     <div class="ah-lg-mode">
