--- a/src/main/resources/templates/fragments/base/head.html
+++ b/src/main/resources/templates/fragments/base/head.html
@@ -8,7 +8,7 @@
     <meta name="description" content="">
     <meta name="author" content="">
     <link href="images/favicon.png" rel="shortcut icon">
-    <link rel="stylesheet" href="/css/header/responsable-hidden.css">
+    <link rel="stylesheet" href="/css/custom/custom.css">
     <title>Gifthub</title>
 
     <!--====== Google Font ======-->
