--- a/src/main/resources/templates/fragments/base/script.html
+++ b/src/main/resources/templates/fragments/base/script.html
@@ -28,7 +28,7 @@
     <script src="https://kit.fontawesome.com/6bcdc51097.js" crossorigin="anonymous"></script>
 
     <!--====== Custom ======-->
-    <script src="/mini-cart.js"></script>
+    <script src="/js/cart/mini-cart.js"></script>
 
 
     <!--====== Noscript ======-->
