--- a/src/main/resources/templates/payment/payment.html
+++ b/src/main/resources/templates/payment/payment.html
@@ -484,9 +484,9 @@
 <!--====== End - Main App ======-->
 
 <th:block th:replace="fragments/base/script :: script"></th:block>
-<script th:src="@{/jquery.twbsPagination.min.js}"></script>
-<script th:src="@{/orders.js}"></script>
-<script th:src="@{/payment.js}"></script>
+<script th:src="@{/js/pagination/jquery.twbsPagination.min.js}"></script>
+<script th:src="@{/js/payment/orders.js}"></script>
+<script th:src="@{/js/payment/payment.js}"></script>
 <script th:inline="javascript">
     window.onload = () => {
         setPoint();
