--- a/src/main/resources/templates/payment/orders.html
+++ b/src/main/resources/templates/payment/orders.html
@@ -518,8 +518,8 @@
 <!--====== End - Main App ======-->
 
 <th:block th:replace="fragments/base/script :: script"></th:block>
-<script th:src="@{/jquery.twbsPagination.min.js}"></script>
-<script th:src="@{/orders.js}"></script>
+<script th:src="@{/js/pagination/jquery.twbsPagination.min.js}"></script>
+<script th:src="@{/js/payment/orders.js}"></script>
 <script th:inline="javascript">
     window.onload = () => {
         loadOrders([[${param.page}]], [[${param.size}]]);
