feat: add user logout in front
현재는 단순히 localStorage의 token을 제거하는 역할

--- a/src/main/resources/templates/fragments/base/header.html
+++ b/src/main/resources/templates/fragments/base/header.html
@@ -45,7 +45,7 @@
                                     <span>로그인</span></a></li>
 
                             <li id="nav-logout-li" class="u-s-m-r-6">
-                                <a href="/logout"><i class="fas fa-lock-open"></i>
+                                <a class="btn" onclick="kakaoLogout()"><i class="fas fa-lock-open"></i>
                                     <span>로그아웃</span></a>
                             </li>
                         </ul>
