--- a/src/main/resources/templates/fragments/base/script.html
+++ b/src/main/resources/templates/fragments/base/script.html
@@ -47,8 +47,9 @@
         </div>
     </noscript>
 
+    <script src="https://t1.kakaocdn.net/kakao_js_sdk/2.5.0/kakao.min.js" integrity="sha384-kYPsUbBPlktXsY6/oNHSUDZoTX6+YI51f63jCPEIPFP09ttByAdxd2mEjKuhdqn4" crossOrigin="anonymous"></script>
+    <script src="/js/account/logout.js"></script>
     <script src="/js/navbar.js"></script>
-
 
 </th:block>
 </html>
