--- a/src/main/resources/templates/cart/list.html
+++ b/src/main/resources/templates/cart/list.html
@@ -87,11 +87,11 @@
                                             <span>CONTINUE SHOPPING</span></a></div>
                                     <div class="route-box__g2">
 
-                                        <a class="route-box__link" href="cart.html"><i class="fas fa-trash"></i>
+                                        <a class="route-box__link" id="clear-cart"><i class="fas fa-trash"></i>
 
                                             <span>CLEAR CART</span></a>
 
-                                        <a class="route-box__link" href="cart.html"><i class="fas fa-sync"></i>
+                                        <a class="route-box__link"><i class="fas fa-sync"></i>
 
                                             <span>UPDATE CART</span></a></div>
                                 </div>
@@ -508,6 +508,7 @@
 <script th:inline="javascript">
     window.onload = () => {
         loadCarts([[${param.page}]], [[${param.size}]]);
+        removeAllEvent();
     }
 </script>
 </body>
