--- a/src/main/resources/templates/payment/orders.html
+++ b/src/main/resources/templates/payment/orders.html
@@ -39,10 +39,10 @@
                             <ul class="breadcrumb__list">
                                 <li class="has-separator">
 
-                                    <a href="index.html">Home</a></li>
+                                    <a href="/">Home</a></li>
                                 <li class="is-marked">
 
-                                    <a href="dash-my-order.html">My Account</a></li>
+                                    <a href="/payment/orders">My Orders</a></li>
                             </ul>
                         </div>
                     </div>
