Fix: 현재 페이지 경로 링크 수정

--- a/src/main/resources/templates/attendance/attendance.html
+++ b/src/main/resources/templates/attendance/attendance.html
@@ -34,10 +34,10 @@
                                 <ul class="breadcrumb__list">
                                     <li class="has-separator">
 
-                                        <a href="index.html">Home</a></li>
+                                        <a href="/">Home</a></li>
                                     <li class="is-marked">
 
-                                        <a href="cart.html">Attendance</a></li>
+                                        <a href="/attendances">Attendance</a></li>
                                 </ul>
                             </div>
                         </div>
