--- a/src/main/resources/templates/payment/payment.html
+++ b/src/main/resources/templates/payment/payment.html
@@ -46,10 +46,10 @@
                             <ul class="breadcrumb__list">
                                 <li class="has-separator">
 
-                                    <a href="index.html">Home</a></li>
+                                    <a href="/">Home</a></li>
                                 <li class="is-marked">
 
-                                    <a href="dash-my-order.html">My Account</a></li>
+                                    <a href="/pay/kakao">Payment</a></li>
                             </ul>
                         </div>
                     </div>
