Fix: 결제시 금액이 정확하지 않던 현상 수정

--- a/src/main/resources/templates/payment/payment.html
+++ b/src/main/resources/templates/payment/payment.html
@@ -517,8 +517,10 @@
     }
 
     let reKakaoEvent = () => {
+        $("#kakao-pay").attr("disabled", true);
         $("#kakao-pay").off("click");
         let opened = addKakaoPayEvent("Point", $("#point").val());
+        $("#kakao-pay").attr("disabled", false);
     }
 </script>
 </body>
