Feat: 출석체크 모달창 추가

--- a/src/main/resources/templates/fragments/base/footer.html
+++ b/src/main/resources/templates/fragments/base/footer.html
@@ -158,7 +158,41 @@
       </div>
     </div>
 
-
+  <!--====== Attendance Modal ======-->
+  <div class="modal fade" tabindex="-1" role="dialog" id="attendance">
+    <div class="modal-dialog" role="document">
+      <div class="modal-content">
+        <div class="modal-header">
+          <h5 class="modal-title">출석체크</h5>
+          <button type="button" class="btn dismiss-button fas fa-times" data-dismiss="modal" aria-label="Close">
+          </button>
+        </div>
+        <div class="modal-body">
+          <!--====== Section Content ======-->
+          <div class="section__content">
+            <div class="container">
+              <div id="calendar-container">
+                <div class="row">
+                  <div class="unit-box">일</div>
+                  <div class="unit-box">월</div>
+                  <div class="unit-box">화</div>
+                  <div class="unit-box">수</div>
+                  <div class="unit-box">목</div>
+                  <div class="unit-box">금</div>
+                  <div class="unit-box">토</div>
+                </div>
+              </div>
+            </div>
+          </div>
+          <!--====== End - Section Content ======-->
+        </div>
+        <div class="modal-footer">
+          <button type="button" class="s-option__link btn--e-brand-shadow cursor-pointer" data-dismiss="modal">Close</button>
+        </div>
+      </div>
+    </div>
+  </div>
+  <!--====== End - Attendance Modal ======-->
 
 
 
