--- a/src/main/resources/templates/fragments/base/head.html
+++ b/src/main/resources/templates/fragments/base/head.html
@@ -23,5 +23,7 @@
     <!--====== App ======-->
     <link rel="stylesheet" href="/css/app.css">
 
+    <!--====== Custom ======-->
+    <link rel="stylesheet" href="/css/custom/attendance.css">
 </th:block>
 </html>
