--- a/src/main/resources/templates/fragments/base/header.html
+++ b/src/main/resources/templates/fragments/base/header.html
@@ -24,6 +24,12 @@
                         <span class="ah-close">✕ Close</span>
                         <!--====== List ======-->
                         <ul id="nav-list" class="ah-list ah-list--design1 ah-list--link-color-secondary">
+                            <li id="nav-attendance-li" class="u-s-m-r-6">
+                                <a id="show-attendance-a">
+                                    <i class="fa-regular fa-square-check"></i>
+                                    <span>출석체크</span>
+                                </a>
+                            </li>
                             <li id="nav-point-li" class="u-s-m-r-6">
                                 <a href="/pay/kakao">
                                     <i class="fa-solid fa-wallet"></i>
