--- a/src/main/resources/templates/fragments/base/script.html
+++ b/src/main/resources/templates/fragments/base/script.html
@@ -29,6 +29,7 @@
 
     <!--====== Custom ======-->
     <script src="/js/cart/mini-cart.js"></script>
+    <script src="/js/attendance/attendance.js"></script>
 
 
     <!--====== Noscript ======-->
