--- a/src/main/resources/templates/account/login.html
+++ b/src/main/resources/templates/account/login.html
@@ -66,7 +66,7 @@
                                             <!--카카오 로그인 -->
                                         <div id="social-login-div" class="gl-s-api">
                                             <div class="u-s-m-b-5">
-                                                <button class="btn--icon" type="button">
+                                                <button  class="btn--icon" type="button">
                                                     <a href="https://kauth.kakao.com/oauth/authorize?response_type=code&client_id=578c006810acb509f2ccc52277d13ec9&redirect_uri=http://localhost:8081/login&prompt=select_account">
                                                     <img src="/images/kakaologin/kakao_login_medium_wide.png" class="btn u-img-fluid">
                                                     </a>
@@ -75,7 +75,9 @@
 
                                             <div class="u-s-m-b-5">
                                                 <button class="btn--icon" type="button">
+                                                    <a href="https://nid.naver.com/oauth2.0/authorize?client_id=iw7Eqm8dtb9NpQ22vmxe&redirect_uri=http://localhost:8081/login&response_type=code">
                                                     <img src="/images/naver-login/naver_login_medium.png" class="btn u-img-fluid">
+                                                    </a>
                                                 </button>
                                             </div>
 
@@ -107,6 +109,8 @@
 <th:block th:replace="fragments/base/script :: script"></th:block>
 <script src="/js/account/login.js"></script>
 <script src="https://t1.kakaocdn.net/kakao_js_sdk/2.5.0/kakao.min.js" integrity="sha384-kYPsUbBPlktXsY6/oNHSUDZoTX6+YI51f63jCPEIPFP09ttByAdxd2mEjKuhdqn4" crossOrigin="anonymous"></script>
+<!--<script src="https://static.nid.naver.com/js/naveridlogin_js_sdk_2.0.2.js"></script>-->
+<script src="/js/account/naver-login.js"></script>
 
 </body>
 </html>
