feat: add gifticon list page

--- a/src/main/resources/templates/fragments/base/header.html
+++ b/src/main/resources/templates/fragments/base/header.html
@@ -827,22 +827,12 @@
 
                     <!--====== Menu ======-->
                     <div class="ah-lg-mode">
-
                         <span class="ah-close">✕ Close</span>
-
                         <!--====== List ======-->
                         <ul class="ah-list ah-list--design2 ah-list--link-color-secondary">
-                            <li>
-                                <a href="/gifticon/add">기프티콘 등록</a></li>
-
-                            <li>
-                                <a href="#">기프티콘 사용</a></li>
-
-                            <li>
-                                <a href="shop-side-version-2.html">기프티콘 선물</a></li>
-
-                            <li>
-                                <a href="shop-side-version-2.html">결제 하기</a></li>
+                            <li><a href="/gifticon/add">기프티콘 등록</a></li>
+                            <li><a href="/user/my-gifticon">내 기프티콘</a></li>
+                            <li><a href="/gifticon/list">기프티콘 목록</a></li>
 
                             <li class="has-dropdown">
                                 <a>PAGES<i class="fas fa-angle-down u-s-m-l-6"></i></a>
@@ -850,11 +840,9 @@
                                 <span class="js-menu-toggle"></span>
                                 <ul style="width:170px">
                                     <li class="has-dropdown has-dropdown--ul-left-100">
-
                                         <a>Home<i class="fas fa-angle-down i-state-right u-s-m-l-6"></i></a>
 
                                         <!--====== Dropdown ======-->
-
                                         <span class="js-menu-toggle"></span>
                                         <ul style="width:118px">
                                             <li>
@@ -1066,21 +1054,40 @@
                                 </ul>
                                 <!--====== End - Dropdown ======-->
                             </li>
+
+
                             <li class="has-dropdown">
                                 <a>기프티콘 구매<i class="fas fa-angle-down u-s-m-l-6"></i></a>
+
+
                                 <!--====== Dropdown ======-->
                                 <span class="js-menu-toggle"></span>
                                 <ul style="width:200px">
-                                    <li>
 
-                                        <a href="blog-left-sidebar.html">카테고리로 보기</a></li>
-                                    <li>
+                                    <li><a href="/gifticon/list/all">전체 보기</a></li>
+                                    <li><a href="blog-right-sidebar.html">브랜드로 보기</a></li>
+                                    <li class="has-dropdown has-dropdown--ul-left-100">
+                                        <a>카테고리<i class="fas fa-angle-down i-state-right u-s-m-l-6"></i></a>
 
-                                        <a href="blog-right-sidebar.html">브랜드로 보기</a></li>
-                                    <li>
-                                        <a href="blog-detail.html">Blog Details</a></li>
+                                        <!--====== Dropdown ======-->
+                                        <span class="js-menu-toggle"></span>
+                                        <ul style="width:118px">
+                                            <li><a href="/gifticon/list/beverage">음료</a></li>
+                                            <li><a href="/gifticon/list/food">식품</a></li>
+                                            <li><a href="/gifticon/list/food">편의점</a></li>
+                                        </ul>
+                                        <!--====== End - Dropdown ======-->
+                                    </li>
+
+
+
+
+
                                 </ul>
                                 <!--====== End - Dropdown ======-->
+
+
+
                             </li>
                         </ul>
                         <!--====== End - List ======-->
