Feat: 카테고리 클릭시 ajax요청하는 부분 추가

--- a/src/main/resources/templates/gifticon/list.html
+++ b/src/main/resources/templates/gifticon/list.html
@@ -121,6 +121,8 @@
         createProductSpan("생활/가전/엔터");
 
         getPurchasingGifticon([[${param.page}]], [[${param.size}]]);
+
+        setProductSelectorEvent();
     }
 </script>
 
