Feat: Load more 버튼 기능 추가

--- a/src/main/resources/templates/gifticon/list.html
+++ b/src/main/resources/templates/gifticon/list.html
@@ -68,7 +68,7 @@
                         <div class="col-lg-12">
                             <div class="load-more">
 
-                                <button class="btn btn--e-brand" type="button">Load More</button>
+                                <button class="btn btn--e-brand" id="load-more-btn" data-page="1" type="button">Load More</button>
                             </div>
                         </div>
                     </div>
@@ -123,6 +123,14 @@
         getPurchasingGifticon([[${param.page}]], [[${param.size}]]);
 
         setProductSelectorEvent();
+
+        document.querySelector("#load-more-btn").addEventListener("click", function(event) {
+            let page = event.target.dataset.page;
+
+            getPurchasingGifticon(page, [[${param.size}]]);
+
+            event.target.dataset.page++;
+        });
     }
 </script>
 
