--- a/src/main/resources/templates/payment/orders.html
+++ b/src/main/resources/templates/payment/orders.html
@@ -69,11 +69,11 @@
                                         <span class="dash__text u-s-m-b-16">OOO님</span>
                                         <ul class="dash__f-list">
                                             <li>
-                                                <a class="dash-active" href="/mypage">내 정보</a></li>
+                                                <a href="/mypage">내 정보</a></li>
                                             <li>
                                                 <a href="/wishlist">내 즐겨찾기</a></li>
                                             <li>
-                                                <a href="/payment/orders">결제 내역</a></li>
+                                                <a class="dash-active" href="/payment/orders">결제 내역</a></li>
                                             <li>
                                                 <a href="#">구매 내역</a></li>
                                             <li>
