Refactor : "add.html"
list ing

--- a/src/main/resources/templates/gifticon/add.html
+++ b/src/main/resources/templates/gifticon/add.html
@@ -223,7 +223,11 @@
 
 <th:block th:replace="fragments/base/script :: script"></th:block>
 <script src="/js/gifticon/kakao-chatbot.js"></script>
-<script src="/js/gifticon/file-add.js"></script>
+<script src="/js/gifticon/file-add.js" type="text/javascript">
+    window.onload = () => {
+        loadMyLists();
+    }
+</script>
 
 </body>
 </html>
