Design: 카테고리 선택하는 부분 간격 조정

--- a/src/main/resources/templates/gifticon/list.html
+++ b/src/main/resources/templates/gifticon/list.html
@@ -18,6 +18,10 @@
             cursor: pointer;
         }
 
+        .product-name {
+            font-size: small;
+        }
+
         .category-active .product-selector {
             border: orangered 2px solid;
         }
