Fix: 결제 취소시 리다이렉트되던 현상 수정

--- a/src/main/resources/templates/payment/close.html
+++ b/src/main/resources/templates/payment/close.html
@@ -5,7 +5,10 @@
     <title>Title</title>
 </head>
 <body>
-  <script>
+  <script th:inline="javascript">
+      if ([[${param.redirect}]]) {
+          opener.location.href = "/";
+      }
       window.close();
   </script>
 </body>
