--- a/src/main/resources/templates/gifticon/list.html
+++ b/src/main/resources/templates/gifticon/list.html
@@ -16,6 +16,7 @@
             color: white;
             display: inline-block;
             cursor: pointer;
+            transition: border 0.3s;
         }
 
         .product-name {
