Design: 클릭시 border 색 변경

--- a/src/main/resources/templates/gifticon/list.html
+++ b/src/main/resources/templates/gifticon/list.html
@@ -24,7 +24,7 @@
         }
 
         .category-active .product-selector {
-            border: orangered 2px solid;
+            border: red 2px solid;
         }
 
     </style>
