--- a/src/main/resources/templates/fragments/base/header.html
+++ b/src/main/resources/templates/fragments/base/header.html
@@ -1111,6 +1111,9 @@
                         <!--====== List ======-->
                         <ul class="ah-list ah-list--design1 ah-list--link-color-secondary">
                             <li><a href="/wishlist"><i class="far fa-heart"></i></a></li>
+
+                            <li>포인트: <span id="show-point-span"></span></li>
+
                             <li class="has-dropdown">
                                 <a class="mini-cart-shop-link"><i class="fas fa-shopping-bag"></i><span
                                         class="total-item-round"></span></a>
