Feat: 로그인 안 했을 때 포인트 요소 안 보이도록 수정

--- a/src/main/resources/templates/fragments/base/header.html
+++ b/src/main/resources/templates/fragments/base/header.html
@@ -1109,11 +1109,7 @@
                         <span class="ah-close">✕ Close</span>
 
                         <!--====== List ======-->
-                        <ul class="ah-list ah-list--design1 ah-list--link-color-secondary">
-                            <li><a href="/wishlist"><i class="far fa-heart"></i></a></li>
-
-                            <li>포인트: <span id="show-point-span"></span></li>
-
+                        <ul class="ah-list ah-list--design1 ah-list--link-color-secondary" id="side-header">
                             <li class="has-dropdown">
                                 <a class="mini-cart-shop-link"><i class="fas fa-shopping-bag"></i><span
                                         class="total-item-round"></span></a>
