Fix: 로그인 되었을 때도 페이지 이동시 로그인페이지로 가던 현상 수정

--- a/src/main/resources/templates/fragments/base/header.html
+++ b/src/main/resources/templates/fragments/base/header.html
@@ -31,7 +31,7 @@
                                 </a>
                             </li>
                             <li id="nav-point-li" class="u-s-m-r-6">
-                                <a href="/pay/kakao">
+                                <a href="/payment/kakao">
                                     <i class="fa-solid fa-wallet"></i>
                                     <span>포인트 충전</span>
                                 </a>
