Fix: 라디오 버튼 선택시 포인트 금액이 바뀌지 않던 현상 수정

--- a/src/main/resources/templates/payment/payment.html
+++ b/src/main/resources/templates/payment/payment.html
@@ -147,11 +147,11 @@
 <script th:src="@{/js/payment/payment.js}"></script>
 <script th:inline="javascript">
     window.onload = () => {
-        setPoint();
+        setPoints();
         $("[name=point]").on("change", function() {
-            setPoint();
+            setPoints();
 
-            $("#grand-total").text();
+            $("#grand-total").text(totalAmount);
         });
 
         $("#point").on("propertychange change keyup paste input", function() {
@@ -163,7 +163,7 @@
         let opened = addKakaoPayEvent("Point", totalAmount);
     }
 
-    let setPoint = () => {
+    let setPoints = () => {
         let selectedValue = $("input[name='point']:checked").val();
         $("#point").val($("label[for='point-" + selectedValue + "']").text());
 
