--- a/src/main/resources/static/css/custom/attendance.css
+++ b/src/main/resources/static/css/custom/attendance.css
@@ -13,6 +13,7 @@
     text-align: center;
     font-size: 2.0rem;
     line-height: calc(70vh / 6);
+    transition: background-color 0.1s;
 }
 
 .unattendance {
