Design: 포인트 수동 입력시 라디오 버튼 체크 해제되도록 변경

--- a/src/main/resources/templates/payment/payment.html
+++ b/src/main/resources/templates/payment/payment.html
@@ -158,6 +158,8 @@
             totalAmount = $("#point").val();
 
             setPrice();
+
+            $("input[name=point]").prop("checked", false);
         });
 
         let opened = addKakaoPayEvent("Point", totalAmount);
